--- a/Notebook/color.ipynb
+++ b/Notebook/color.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_model():\n",
-    "    PROTOTXT = \"Model/colorization_deploy_v2.prototxt\"\n",
-    "    POINTS = \"Model/pts_in_hull.npy\"\n",
-    "    MODEL = \"Model/colorization_release_v2.caffemodel\"\n",
+    "    PROTOTXT = \"../Model/colorization_deploy_v2.prototxt\"\n",
+    "    POINTS = \"../Model/pts_in_hull.npy\"\n",
+    "    MODEL = \"../Model/colorization_release_v2.caffemodel\"\n",
     "    net = cv2.dnn.readNetFromCaffe(PROTOTXT, MODEL)\n",
     "    pts = np.load(POINTS)\n",
     "    class8 = net.getLayerId(\"class8_ab\")\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,32 +65,32 @@
     "    colorized = np.clip(colorized, 0, 1)\n",
     "    colorized = (255 * colorized).astype(\"uint8\")\n",
     "    n=path.split('/')[-1].split('.')[0]\n",
-    "    output_path = f\"colorized_images/{n}_colorized.jpg\"\n",
+    "    output_path = f\"../colorized_images/{n}_colorized.jpg\"\n",
     "    cv2.imwrite(output_path, colorized)\n",
     "    return output_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path='imgs/ansel_adams2.jpg'"
+    "path='../imgs/ansel_adams2.jpg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'colorized_images/ansel_adams2_colorized.jpg'"
+       "'../colorized_images/ansel_adams2_colorized.jpg'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
