--- a/Notebook/color.ipynb
+++ b/Notebook/color.ipynb
@@ -65,7 +65,7 @@
     "    colorized = np.clip(colorized, 0, 1)\n",
     "    colorized = (255 * colorized).astype(\"uint8\")\n",
     "    n=path.split('/')[-1].split('.')[0]\n",
-    "    output_path = f\"../colorized_images/{n}_colorized.jpg\"\n",
+    "    output_path = f\"../imgs_output/{n}_colorized.jpg\"\n",
     "    cv2.imwrite(output_path, colorized)\n",
     "    return output_path"
    ]
