--- a/Notebook/color.ipynb
+++ b/Notebook/color.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,15 @@
     "    colorized = np.clip(colorized, 0, 1)\n",
     "    colorized = (255 * colorized).astype(\"uint8\")\n",
     "    n=path.split('/')[-1].split('.')[0]\n",
-    "    output_path = f\"../imgs_output/{n}_colorized.jpg\"\n",
+    "    type=path.split('.')[-1]\n",
+    "    output_path = f\"../imgs_output/{n}_colorized.{type}\"\n",
     "    cv2.imwrite(output_path, colorized)\n",
     "    return output_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'../imgs_output/lion_colorized.jpg'"
+       "'../imgs_output/lion_colorized.jpeg'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
