--- a/Notebook/color.ipynb
+++ b/Notebook/color.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,17 @@
     "    pts = pts.transpose().reshape(2, 313, 1, 1)\n",
     "    net.getLayer(class8).blobs = [pts.astype(\"float32\")]\n",
     "    net.getLayer(conv8).blobs = [np.full([1, 313], 2.606, dtype=\"float32\")]\n",
-    "    return net,pts"
+    "    return net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def colorizer(path):\n",
-    "    net,pts=load_model()\n",
+    "    net=load_model()\n",
     "    L,image,lab = load_image(path)\n",
     "    net.setInput(cv2.dnn.blobFromImage(L))\n",
     "    ab = net.forward()[0, :, :, :].transpose((1, 2, 0))\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
